--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <img src="assets/pitchdeck 1.jpg" class="deck-image" alt="Header">
         <img src="assets/pitchdeck 2.jpg" class="deck-image" alt="Problem">
         <img src="assets/pitchdeck 3.jpg" class="deck-image" alt="Solution">
+        <img src="assets/pitchdeck 4.jpg" class="deck-image" alt="BusinessModel">
         <!-- <img src="assets/04-tech.jpg" class="deck-image" alt="Tech">
         <img src="assets/05-footer.jpg" class="deck-image" alt="Contact"> -->
         
