--- a/index.html
+++ b/index.html
@@ -41,20 +41,19 @@
         /* OPTIONAL: BOTTOM FLOATING BUTTON */
         .fab {
             position: fixed;
-            bottom: 30px;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
-            background: #CCFF00; /* Neon Yellow */
+            background: #D8FF3F; /* Neon Yellow */
             color: #000;
             padding: 12px 24px;
             border-radius: 50px;
-            font-weight: 800;
+            font-weight: 500;
             text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 1px;
-            box-shadow: 0 0 20px rgba(204, 255, 0, 0.6);
             z-index: 100;
-            font-size: 14px;
+            font-size: 12px;
             transition: transform 0.2s;
         }
         .fab:active { transform: translateX(-50%) scale(0.95); }
@@ -67,10 +66,14 @@
         <img src="assets/pitchdeck 2.jpg" class="deck-image" alt="Problem">
         <img src="assets/pitchdeck 3.jpg" class="deck-image" alt="Solution">
         <img src="assets/pitchdeck 4.jpg" class="deck-image" alt="BusinessModel">
+        <img src="assets/pitchdeck 5.jpg" class="deck-image" alt="Product">
+        <img src="assets/pitchdeck 6.jpg" class="deck-image" alt="Whyus">
+        <img src="assets/pitchdeck 7.jpg" class="deck-image" alt="Roadmap">
+        <img src="assets/pitchdeck 8.jpg" class="deck-image" alt="AboutUs">
         <!-- <img src="assets/04-tech.jpg" class="deck-image" alt="Tech">
         <img src="assets/05-footer.jpg" class="deck-image" alt="Contact"> -->
         
-        <a href="mailto:contact@sponsoryourday.com" class="fab">Contact Us</a>
+        <a href="mailto:hychoe@umich.edu" class="fab">Contact Us</a>
     </div>
 
 </body>
